--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ scripts.lnk
 servers.dat
 usercache.json
 usernamecache.json
+mods/PortalGunSounds.pak.md5
+mods/PortalGunSounds.pak
+minetweaker.log
